tests/pp-fail/error_directive.fl.0.exp
Error: error_directive.fl(1,1): \error: things blew up
\error "things blew up"
^                       
